--- a/frontend/src/app/plugins/text/components/text/text.component.html
+++ b/frontend/src/app/plugins/text/components/text/text.component.html
@@ -1,1 +1,16 @@
-<div class="ck-content" [innerHTML]="settings.text | safeHtml"></div>
+
+@if (adminConfig) {
+  @if (disabled) {
+    <div (mousedown)="disable($event)" #text class="ck-content" [contentEditable]="false" [innerHTML]="settings.text | safeHtml"></div>
+  } @else {
+    @if(!editorReady) {
+      <div #text class="ck-content" [contentEditable]="false" [innerHTML]="settings.text | safeHtml"></div>
+    }
+    <editor #editor [style.display]="!editorReady ? 'none' : ''"
+            [init]="tinyMceOptions"
+            [(ngModel)]="settings.text"
+    ></editor>
+  }
+} @else {
+  <div class="ck-content" [contentEditable]="false" [innerHTML]="settings.text | safeHtml"></div>
+}
